--- a/pom.xml
+++ b/pom.xml
@@ -7,6 +7,14 @@
 	<packaging>war</packaging>
 	
 	<dependencies>
+		
+		<!-- clojure -->
+		<dependency>
+			<groupId>org.clojure</groupId>
+			<artifactId>clojure</artifactId>
+			<version>1.8.0-RC1</version>
+		</dependency>
+		
 		<!--  jackson JSNO stuff -->
 		<dependency>
 			<groupId>com.fasterxml.jackson.core</groupId>
@@ -170,7 +178,14 @@
 	</dependencies>
 	
 	<build>
-	
+		<resources>
+			<resource>
+				<directory>src/main/clojure</directory>
+			</resource>
+			<resource>
+				<directory>src/main/resources</directory>
+			</resource>
+		</resources>
   		<plugins>
   			<plugin>
             <groupId>org.apache.maven.plugins</groupId>
@@ -187,6 +202,27 @@
 		        <artifactId>maven-war-plugin</artifactId>
 		        <version>2.6</version>
 		    </plugin>
+		     <plugin>
+   <groupId>com.theoryinpractise</groupId>
+   <artifactId>clojure-maven-plugin</artifactId>
+   <version>1.3.10</version>
+   <executions>
+     <execution>
+       <id>compile</id>
+       <phase>compile</phase>
+       <goals>
+         <goal>compile</goal>
+       </goals>
+     </execution>
+     <execution>
+       <id>test</id>
+       <phase>test</phase>
+       <goals>
+         <goal>test</goal>
+       </goals>
+     </execution>
+   </executions>
+ </plugin>
 		</plugins>
 
 	</build>
