--- a/pom.xml
+++ b/pom.xml
@@ -50,9 +50,24 @@
 			<version>5.0.2.Final</version>
 		</dependency>
 		<dependency>
+			<groupId>org.hibernate.javax.persistence</groupId>
+			<artifactId>hibernate-jpa-2.1-api</artifactId>
+			<version>1.0.0.Final</version>
+		</dependency>	
+		<dependency>
 			<groupId>org.springframework</groupId>
 			<artifactId>spring-orm</artifactId>
 			<version>4.2.2.RELEASE</version>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework</groupId>
+			<artifactId>spring-aop</artifactId>
+			<version>4.2.4.RELEASE</version>
+		</dependency>		
+		<dependency>
+			<groupId>org.aspectj</groupId>
+			<artifactId>aspectjweaver</artifactId>
+			<version>1.8.8</version>
 		</dependency>
 		<dependency>
 			<groupId>org.apache.commons</groupId>
@@ -202,7 +217,7 @@
 		        <artifactId>maven-war-plugin</artifactId>
 		        <version>2.6</version>
 		    </plugin>
-		     <plugin>
+	<!-- 	     <plugin>
 			   <groupId>com.theoryinpractise</groupId>
 			   <artifactId>clojure-maven-plugin</artifactId>
 			   <version>1.3.10</version>
@@ -222,7 +237,7 @@
 			       </goals>
 			     </execution>
 			   </executions>
-			 </plugin>
+			 </plugin> -->
 		</plugins>
 
 	</build>
