--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -6,14 +6,15 @@
 	<welcome-file-list>
 	<welcome-file>/static-files/app.html</welcome-file>
 	</welcome-file-list>
-   
+
+ 
 	<context-param>  
         <param-name>contextConfigLocation</param-name>  
         <param-value>
-        		 /WEB-INF/spring/applicationContext-root.xml
-        		 /WEB-INF/spring/applicationContext-hibernate.xml
+   <!--     		 /WEB-INF/spring/applicationContext-root.xml
+        		 /WEB-INF/spring/applicationContext-hibernate.xml --> 
        </param-value>  
-	</context-param>	
+	</context-param>
     <listener>
 		<listener-class>
 			org.springframework.web.context.ContextLoaderListener
