--- a/pom.xml
+++ b/pom.xml
@@ -8,11 +8,12 @@
 	
 	<dependencies>
 		
-		<!-- clojure -->
+		<!-- mail chimp stuff-->
+		<!--  mandrill -->
 		<dependency>
-			<groupId>org.clojure</groupId>
-			<artifactId>clojure</artifactId>
-			<version>1.8.0-RC1</version>
+		    <groupId>com.mandrillapp.wrapper.lutung</groupId>
+		    <artifactId>lutung</artifactId>
+		    <version>0.0.7</version>
 		</dependency>
 		
 		<!--  jackson JSNO stuff -->
@@ -206,8 +207,8 @@
             <groupId>org.apache.maven.plugins</groupId>
 				    <artifactId>maven-eclipse-plugin</artifactId>
 				    <version>2.10</version>
-				</plugin>
-				<plugin>
+			</plugin>
+			<plugin>
 		        <groupId>org.apache.tomcat.maven</groupId>
 		        <artifactId>tomcat7-maven-plugin</artifactId>
 		        <version>2.2</version>
