--- a/pom.xml
+++ b/pom.xml
@@ -223,27 +223,16 @@
 		        <artifactId>maven-war-plugin</artifactId>
 		        <version>2.6</version>
 		    </plugin>
-	<!-- 	     <plugin>
-			   <groupId>com.theoryinpractise</groupId>
-			   <artifactId>clojure-maven-plugin</artifactId>
-			   <version>1.3.10</version>
-			   <executions>
-			     <execution>
-			       <id>compile</id>
-			       <phase>compile</phase>
-			       <goals>
-			         <goal>compile</goal>
-			       </goals>
-			     </execution>
-			     <execution>
-			       <id>test</id>
-			       <phase>test</phase>
-			       <goals>
-			         <goal>test</goal>
-			       </goals>
-			     </execution>
-			   </executions>
-			 </plugin> -->
+			<plugin>
+				<artifactId>maven-compiler-plugin</artifactId>
+				<version>3.5.1</version>
+				<configuration>
+					<source>1.7</source>
+					<target>1.7</target>
+					<debug>true</debug>
+       				<debuglevel>lines,vars,source</debuglevel> 
+				</configuration>
+			</plugin>
 		</plugins>
 
 	</build>
